Spacing corrections and index changes

--- a/app/assets/stylesheets/assignments.scss
+++ b/app/assets/stylesheets/assignments.scss
@@ -48,17 +48,21 @@ p{
     
 }
 
+
+
 table, th, td{
     border: 2.5px solid #b9975b;
     padding: 12px 12px;
     text-align: left;
+    background-color: white;
 }
 
 a:link, a:visited {
   background-color: #b9975b;
   color: white;
+  border: 2px solid white;
   padding: 10px 25px;
-  text-align: center;
+  text-align: left;
   text-decoration: none;
   display: inline-block;
 }
